--- a/aula 25maio/form.css
+++ b/aula 25maio/form.css
@@ -3,7 +3,7 @@
     panding:0;
 
 }
-    .titulo {
+    #titulo {
         color: #380b61;
         margin-left: 7%;
         font-family: sans-serif;
@@ -11,7 +11,7 @@
     
 
 #subtitulo{
-    color: #380b61;
+    color: #5e1a5e;
     margin-left: 10%;
     font-family: sans-serif;
 
@@ -32,25 +32,63 @@ body{
 }
 
 input,select,textarea,button
+     border-radius: 5px;
+}
+.campo {
+    margin-bottom:  :1em;
 
 }
-
-.campo {
-    margin-bottom: 0,2;
+ .campolabel{
+    margin-bottom: 0,2em;
     color: #59429d ;
     display: block;
 }
 fieldset.grupo .campo
-float : :left;
-margin-right : 1em
+float: left;
+margin-right: 1em;
 
 }
 
 .campo input [type="texto"], .campo input [type="email"], .campo select , .campo textarea {
-    padding: 0.2;
-    border: 1px solid #59429d
-    box-shadow: 2px 2px 2px rgb(0,0,0,0,2)
+    padding: 0.2em;
+    border: 1px solid #59429d;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0,2);
     display: block
+    
+    .campo select option {
+        pading: right 1em;
+    }
+
+    .campo input:focus, .campo select :focus, .campo textarea:focus {
+        background: #e0e0f8;
 }
+    .botao {
+    font-size: 1.2em;
+    background :#59429d;
+    border: 0;
+    margin: botton 1em;
+    color:  #ffffff;
+    padding: 0.2em 0.6em;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0,2);
+    text-shadow :1px 1px 1px rgba(0,0,0,0,5);
+    position: absolute;
+    top: 90%;
+    left: 50 %;
+    margin-right: 50%
+    transform: translate (-50%,-50%);
+   }
+   .boton:hover{
+    background: #ccbbff;
+    box-shadow: inset 2px 2px 2px rgba (0,0,0,0.2);
+    text-shadow: name;
+   }
+   boton,select{
+    cursos: pointer;
+
+   }
+
+   #check{
+    display: inline-block;
+   }
 
 
